# sister

./: .gitignore  .travis.yml  Pipfile  README.md  pyproject.toml  setup.py  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: main.yml
sister/: __init__.py  core.py  download.py  tokenizers.py  word_embedders.py
tests/: test_core.py  test_download.py  test_embedders.py  test_tokenizers.py
